Bug 438310 - Toolbar brush option sliders get stuck on Pattern Scale setting
Summary: Toolbar brush option sliders get stuck on Pattern Scale setting
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2021-06-09 08:18 UTC by Ahab Greybeard
Modified: 2021-09-14 08:46 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
pattenr scale kicking out the selection dropdown (11.81 KB, image/png)
2021-09-09 18:09 UTC, Halla Rempt
Details
Pattern scale slider in Windows (3.36 KB, image/png)
2021-09-09 18:15 UTC, voronwe13
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ahab Greybeard 2021-06-09 08:18:59 UTC
SUMMARY
This happens on all the 4.4.x and the Jun 08 5.0.0-prealpha appimages.
If the brush option slider is set to Pattern Scale, it can not then be changed to any other setting.

STEPS TO REPRODUCE
1. Use the small down arrow at the right of a brush option slider to give the list of possible options.
2. Select the Pattern Scale option
3. Try to change it to a different option.

OBSERVED RESULT
1. The other possible options are listed.
2. The slider is set to Pattern Scale.
3. The Pattern Scale option has no drop down arrow and so can't be changed.

EXPECTED RESULT
3. The Pattern Scale slider has the option drop down button.

SOFTWARE/OS VERSIONS
Krita

 Version: 5.0.0-prealpha (git 8944b0f)
 Languages: en_GB, en, en, en_GB, en
 Hidpi: false

Qt

  Version (compiled): 5.12.9
  Version (loaded): 5.12.9

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 4.19.0-16-amd64
  Pretty Productname: Debian GNU/Linux 10 (buster)
  Product Type: debian
  Product Version: 10
  Desktop: MATE

OpenGL Info
 
  Vendor:  "NVIDIA Corporation" 
  Renderer:  "GeForce GTX 750 Ti/PCIe/SSE2" 
  Version:  "4.6.0 NVIDIA 460.73.01" 
  Shading language:  "4.60 NVIDIA" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:    QSurfaceFormat(version 4.6, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
     Version: 4.6
     Supports deprecated functions true 
     is OpenGL ES: false 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsOpenGLES: true 
  isQtPreferOpenGLES: false
Comment 1 voronwe13 2021-09-09 18:06:54 UTC
I can't replicate this.  On all versions I've used (4.4.x and 5.0.0-prealpha), the dropdown arrow is just to the right of the multiplier dropdown, and works as expected.
Comment 2 Halla Rempt 2021-09-09 18:08:38 UTC
I actually can, with the appimage and my own-built version of Krita, too.
Comment 3 Halla Rempt 2021-09-09 18:09:01 UTC
It might be a matter of which style is used; the appimage doesn't have breeze.
Comment 4 Halla Rempt 2021-09-09 18:09:36 UTC
Created attachment 141427 [details]
pattenr scale kicking out the selection dropdown
Comment 5 voronwe13 2021-09-09 18:15:34 UTC
Created attachment 141428 [details]
Pattern scale slider in Windows

(In reply to Halla Rempt from comment #4)
> Created attachment 141427 [details]
> pattenr scale kicking out the selection dropdown

Interesting, I have no idea why it might be doing that.  In Windows it works fine.  Unfortunately, I don't have Linux or MacOS on any of my machines, so I can't test those.
Comment 6 Halla Rempt 2021-09-10 09:20:35 UTC
Git commit 70f349b14b0e7d5f2ae11ff7e27c6fcf895ff50a by Halla Rempt.
Committed on 10/09/2021 at 09:20.
Pushed by rempt into branch 'master'.

Fix log rotation

This prevents enormous logfiles that make QTextView hang.

M  +16   -12   libs/global/KisUsageLogger.cpp

https://invent.kde.org/graphics/krita/commit/70f349b14b0e7d5f2ae11ff7e27c6fcf895ff50a
Comment 7 Halla Rempt 2021-09-10 09:27:50 UTC
Wrong bug number...