Fix log rotation

This prevents enormous logfiles that make QTextView hang.

BUG:438310